# mark4

./: LICENSE  pyproject.toml
mark4/: main.py  model.py  parameters.yaml
tests/: test_model.py
